restart notebook after 60 seconds at end

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Autoplay notebooks\n",
+    "\n",
+    "This is a javascript extension for Jupyter,\n",
+    "which\n",
+    "\n",
+    "There is a simple Python wrapper to launch the the extension,\n",
+    "which you can add to your notebooks:\n",
+    "\n",
+    "    %run ./autoplay.py\n",
+    "\n",
+    "which loads and displays the javascript."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,131 +30,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a+10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require([\"jquery\", \"base/js/namespace\"], function($, Jupyter) {\n",
-       "  var Autoplay = function() {\n",
-       "    this.interval = null;\n",
-       "    this.paused = false;\n",
-       "  };\n",
-       "\n",
-       "  Autoplay.prototype.step = function() {\n",
-       "    // don't do anything if explicitly paused\n",
-       "    // or another window has focus\n",
-       "    if (!document.hasFocus()) {\n",
-       "      console.debug(\"autoplay: out of focus\");\n",
-       "      return;\n",
-       "    }\n",
-       "    var nb = Jupyter.notebook;\n",
-       "    if (nb.keyboard_manager.mode === \"edit\") {\n",
-       "      // don't auto-execute while a cell is being edited\n",
-       "      console.debug('autoplay: in edit mode');\n",
-       "      return;\n",
-       "    }\n",
-       "    if (\n",
-       "      nb.get_selected_index() + 1 === nb.ncells() &&\n",
-       "      nb.get_selected_cell().get_text().trim() === \"\"\n",
-       "    ) {\n",
-       "      // at the end\n",
-       "      console.debug(\"autoplay: at end\");\n",
-       "    } else {\n",
-       "      Jupyter.notebook.execute_cell_and_select_below();\n",
-       "    }\n",
-       "  };\n",
-       "\n",
-       "  Autoplay.prototype.stop = function() {\n",
-       "    if (this.interval) {\n",
-       "      clearInterval(this.interval);\n",
-       "    }\n",
-       "  };\n",
-       "\n",
-       "  Autoplay.prototype.start = function(ms) {\n",
-       "    ms = ms || 5000;\n",
-       "\n",
-       "    this.stop();\n",
-       "    this.pasued = false;\n",
-       "    var that = this;\n",
-       "    this.interval = setInterval(function() {\n",
-       "      that.step();\n",
-       "    }, ms);\n",
-       "  };\n",
-       "\n",
-       "  if (window.autoplay) {\n",
-       "    window.autoplay.stop();\n",
-       "  }\n",
-       "  window.autoplay = new Autoplay();\n",
-       "  window.autoplay.start();\n",
-       "  return {\n",
-       "    Autoplay: Autoplay,\n",
-       "  };\n",
-       "});\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ./autoplay.py"
    ]
